--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.12.3
 blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
@@ -7,24 +8,35 @@ dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 flask==3.0.3
+frozendict==2.4.6
+html5lib==1.1
 idna==3.7
 importlib-metadata==7.1.0
 itsdangerous==2.2.0
 jinja2==3.1.4
+lxml==5.3.0
 MarkupSafe==2.1.5
+multitasking==0.0.11
 nest-asyncio==1.6.0
 numpy==1.24.4
 packaging==24.1
 pandas==2.0.3
+pandas-datareader==0.10.0
+peewee==3.17.7
+platformdirs==4.3.6
 plotly==5.23.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
 retrying==1.3.4
+scandir==1.10.0
 six==1.16.0
+soupsieve==2.6
 tenacity==8.5.0
 typing-extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+webencodings==0.5.1
 werkzeug==3.0.3
+yfinance==0.1.70
 zipp==3.19.0
